# matter-esp-bloom-guard

./: .gitignore  LICENSE  sdkconfig.defaults.esp32c6
main/: CMakeLists.txt  app_driver.cpp  app_main.cpp  app_priv.h  htu21_defs.h  ulp_error.h
main/ulp/: main.c
